# madoop

./: .coveragerc  .gitignore  .pylintrc  CONTRIBUTING.md  Gemfile  LICENSE  MANIFEST.in  README.md  README_Hadoop_Streaming.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: continuous_integration.yml  spec_preview.yml
docs/: README.md  _config.yml  hadoop_streaming.md
example/: map.py  reduce.py
example/input/: input01.txt  input02.txt
madoop/: __init__.py  __main__.py  exceptions.py  mapreduce.py
madoop/example/input/: input02.txt
tests/: test_api.py  test_cli.py  test_group.py  test_map.py  test_reduce.py  test_stages.py  test_utils.py  utils.py
tests/testdata/word_count/: map.py  map.sh  map_error_msg.py  map_invalid.py  partition.py  partition_error_msg.py  partition_invalid.py  partition_noninteger.py  reduce.py  reduce.sh  reduce_error_msg.py  reduce_exit_1.py  reduce_invalid.py
tests/testdata/word_count/correct/grouper-output/: part-00000  part-00001  part-00002  part-00003
tests/testdata/word_count/correct/grouper-output-2-reducers/: part-00000
tests/testdata/word_count/correct/grouper-output-custom-partitioner/: part-00000  part-00001
tests/testdata/word_count/correct/mapper-output/: part-00000  part-00001  part-00002
tests/testdata/word_count/correct/output/: part-00000  part-00001  part-00002
tests/testdata/word_count/correct/output-2-reducers/: part-00000
tests/testdata/word_count/input/: file01
tests/testdata/word_count/input_empty/: input01.txt
tests/testdata/word_count/output/: part-00001
(+13 files in other folders)
